DevOpsTraning/K8s/Day5/Task1/apple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-deployment
  namespace: trainee-manibharathi
  labels:
    app: apple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
        - name: apple
          image: hashicorp/http-echo
          args:
            - "-text=apple"
