DevOpsTraning/K8s/Day5/Task1/apple-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: trainee-manibharathi
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
