DevOpsTraning/K8s/Day5/Task1/orange-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orange-service
  namespace: trainee-manibharathi
spec:
  selector:
    app: orange
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
